refactor and include maven proj build