@@ -1,1 +1,7 @@
 ## dice_game
+
+1. Compile project with maven
+mvn clean install
+
+2. Run
+java --module-path /Library/Java/javafx-sdk-20.0.1/lib --add-modules javafx.controls,javafx.fxml -jar target/jar-output/dice_game-1.0.0.jar
